; ModuleID = '/home/carl/AnghaBench/bitwise/ion/extr_ast.c_new_decl_func.c'
source_filename = "/home/carl/AnghaBench/bitwise/ion/extr_ast.c_new_decl_func.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i64, i32, i32, i32*, i32*, i32 }

@DECL_FUNC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_6__* @new_decl_func(i32 %0, i8* %1, i32* %2, i64 %3, i32* %4, i32 %5, i32* %6, i32 %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca i32, align 4
  %17 = alloca %struct.TYPE_6__*, align 8
  store i32 %0, i32* %9, align 4
  store i8* %1, i8** %10, align 8
  store i32* %2, i32** %11, align 8
  store i64 %3, i64* %12, align 8
  store i32* %4, i32** %13, align 8
  store i32 %5, i32* %14, align 4
  store i32* %6, i32** %15, align 8
  store i32 %7, i32* %16, align 4
  %18 = load i32, i32* @DECL_FUNC, align 4
  %19 = load i32, i32* %9, align 4
  %20 = load i8*, i8** %10, align 8
  %21 = call %struct.TYPE_6__* @new_decl(i32 %18, i32 %19, i8* %20)
  store %struct.TYPE_6__* %21, %struct.TYPE_6__** %17, align 8
  %22 = load i32*, i32** %11, align 8
  %23 = call i32 @AST_DUP(i32* %22)
  %24 = load %struct.TYPE_6__*, %struct.TYPE_6__** %17, align 8
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %25, i32 0, i32 5
  store i32 %23, i32* %26, align 8
  %27 = load i64, i64* %12, align 8
  %28 = load %struct.TYPE_6__*, %struct.TYPE_6__** %17, align 8
  %29 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %28, i32 0, i32 0
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %29, i32 0, i32 0
  store i64 %27, i64* %30, align 8
  %31 = load i32*, i32** %13, align 8
  %32 = load %struct.TYPE_6__*, %struct.TYPE_6__** %17, align 8
  %33 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %32, i32 0, i32 0
  %34 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %33, i32 0, i32 4
  store i32* %31, i32** %34, align 8
  %35 = load i32, i32* %14, align 4
  %36 = load %struct.TYPE_6__*, %struct.TYPE_6__** %17, align 8
  %37 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %36, i32 0, i32 0
  %38 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %37, i32 0, i32 1
  store i32 %35, i32* %38, align 8
  %39 = load i32*, i32** %15, align 8
  %40 = load %struct.TYPE_6__*, %struct.TYPE_6__** %17, align 8
  %41 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %40, i32 0, i32 0
  %42 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %41, i32 0, i32 3
  store i32* %39, i32** %42, align 8
  %43 = load i32, i32* %16, align 4
  %44 = load %struct.TYPE_6__*, %struct.TYPE_6__** %17, align 8
  %45 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %44, i32 0, i32 0
  %46 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %45, i32 0, i32 2
  store i32 %43, i32* %46, align 4
  %47 = load %struct.TYPE_6__*, %struct.TYPE_6__** %17, align 8
  ret %struct.TYPE_6__* %47
}

declare dso_local %struct.TYPE_6__* @new_decl(i32, i32, i8*) #1

declare dso_local i32 @AST_DUP(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
